Update the README.

--- a/README
+++ b/README
@@ -1,2 +1,9 @@
 This document is a draft of a Code of Conduct for the 
 Computer Science Tutors of Portland State University. 
+
+Feedback I am looking for:
+- typos, spelling/grammar errors
+- Should another section be added? Is any section unnecessary?
+- Do you agree with things I've designated as part of or not part of the tutors' responsibilities?
+
+Please give me notes or make a pull request.
